- Fixed page going out of bounds

--- a/src/styles/base/defaults/_colors.scss
+++ b/src/styles/base/defaults/_colors.scss
@@ -1,5 +1,7 @@
-$text-grey: #4a4a4a;
-$background-grey: #f6f6f6;
-$background-grey-selected: #00000024;
+// Grey
+$grey: #4a4a4a;
+$grey-light: #f6f6f6;
+$grey-dark: #00000024;
+
+// White
 $white: #fff;
-$blue: #0080ff;
