--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -1,5 +1,5 @@
 .main {
-  background-color: $background-grey;
+  background-color: $grey-light;
   flex-grow: 1;
   height: 100vh;
 }
