--- a/src/styles/components/_specific/sidemenu/_sidemenu-item.scss
+++ b/src/styles/components/_specific/sidemenu/_sidemenu-item.scss
@@ -1,3 +1,4 @@
+// ** CLASSES **
 // -- SIDEMENU ITEMS --
 .sidemenu__items {
   height: 100vh;
@@ -5,5 +6,5 @@
 
 .sidemenu__item {
   text-decoration: none;
-  color: $text-grey;
+  color: $grey;
 }
